# revolution

./: Cargo.toml  deny.toml
src/: main.rs
zuu/stderr/: clippy  deny
zuu/stdout/: audit
