[package]
name = "revolution"
version = "0.1.0"
edition = "2021"
description = "a financial application"
authors = [ "Willy Micieli" ]
license = "MIT"
readme = "REAMDE.md"
repository = "https://github.com/otechdo/revolution"
[dependencies]
adw = { version = "0.7.0", package = "libadwaita" }
chrono = "0.4.38"
gtk = { version = "0.9.0", package = "gtk4", features = ["gnome_47"] }
mysql_async = "0.34.1"
